# Code3

./: .gitignore  .mcp.README.md  .mcp.json  README.md  README.zh-CN.md
docs/: 01-data-model.md  01-data-stream.md  01-datastream.md  02-interfaces.md  02-prd-spec-mcp.md  03-architecture.md  03-packages-structure.md  03-prd-bounty-dashboard.md  04-architect-spec-mcp.md  04-datastream.md  05-architect-bounty-dashboard.md  05-packages-structure.md  06-interfaces.md  06-issue-metadata.md  06-quickstart.md  07-mcp-tools-spec.md  07-ui-ux.md  08-contract-spec.md  08-workflow.md  09-api-and-config.md  09-security.md  10-chain-offchain-bridge.md  11-dashboard-ux.md  12-security-and-secrets.md  13-init-memory-guides.md  14-data-model.md  99-glossary.md  README.md
docs-v1/: 02-architecture.md  04-quickstart.md  05-data-model.md  09-security.md
spec-mcp/aptos-mcp/: README.md  package.json  pnpm-lock.yaml  vitest.config.ts
spec-mcp/client-local/: README.md  package.json
spec-mcp/client-remote/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
spec-mcp/docs/: README.md
spec-mcp/server/: package.json
spec-mcp/spec-kit-mcp/: AUDIT_REPORT.md  (+4 more)
task3/bounty-operator/solana/programs/bounty-manager/: Cargo.toml
task3/bounty-operator/solana/programs/bounty-manager/src/: constants.rs  error.rs  events.rs  lib.rs
task3/bounty-operator/solana/programs/bounty-manager/src/instructions/: accept_bounty.rs  claim_bounty.rs  confirm_bounty.rs  create_bounty.rs  initialize.rs  mod.rs  submit_bounty.rs
task3/bounty-operator/solana/programs/bounty-manager/src/state/: mod.rs
(+252 files in other folders)
